manifests/mysql-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
    tier: mysql
spec:
  ports:
  - port: 3306
  ##
  # Create service selector labels here
  ##
  selector:
    app: wordpress
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
    tier: mysql
spec:
  ##
  # Create app label selectors here
  ##
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  template:
    ##
    # Create metadata labels here
    ##
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        ##
        # define volume mounts here, be sure to reference
        # the PVC in your container spec
        ##
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
