manifests/wp-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  ports:
    - port: 80
    ##
    # Create service selector labels here
    ##
  selector:
    app: wordpress
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 3
  ##
  # Create app selector labels here
  ##
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    ##
    # Create metadata labels here
    ##
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - image: wordpress:6.2.1-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
      ##
      # define volume mounts here, be sure to reference
      # the PVC in your container spec
      ##
          volumeMounts:
            - name: wp-pv-claim
            mountPath: /var/www/html
      volumes:
        - name: wp-pv-claim
          persistentVolumeClaim:
            claimName: wordpress-pv-claim
